objects/PL_PS__c.object
<CustomObject>
    <fields>
        <fullName>CAL_AllOtherCost__c</fullName>
        <formula>(ps_NS_to_Cust__c * Product_Group__r.Other_Net_Sales__c ) + ( Cost__c *  Product_Group__r.Other_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>other cost allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAL_COGS__c</fullName>
        <description>Cost * Third Party over head + Net * COGs%</description>
        <formula>(ps_NS_to_Cust__c *  Product_Group__r.COGS__c) + (Cost__c * Product_Summary__r.Third_Party_Overhead__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF( Text(Quote__r.SBQQ__Opportunity2__r.L2I_Product_Category__c) != &quot;PTS&quot;, Gross_Sales__c - Net_Sales__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Sales__c</fullName>
        <description>Hold total Standard Price from all Quote Lines.</description>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Code__c</fullName>
        <label>Install Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Maintenance_Cost__c</fullName>
        <description>Used for PTS Quote&#39;s Line Maintenance Cost</description>
        <label>Line Maintenance Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Sales__c</fullName>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Key__c</fullName>
        <label>PS Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>PL_Product_Group__c</referenceTo>
        <relationshipName>Product_Summary_by_Ins_Loc</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Summary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PL_MD__c.MD_Type__c</field>
                <operation>equals</operation>
                <value>Product Summary</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PL_MD__c</referenceTo>
        <relationshipLabel>Quote Product Summary</relationshipLabel>
        <relationshipName>Product_Summary_by_Ins_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipName>Product_Summary_by_Ins_Loc</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Red_in_GS__c</fullName>
        <formula>Discount__c +  Credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reduction in Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>Product_Summary__r.Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Cost__c</fullName>
        <label>Warranty Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ps_GM__c</fullName>
        <formula>ps_NS_to_Cust__c -  Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ps_GM_p__c</fullName>
        <formula>ps_GM__c /  Gross_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ps_NS_to_Cust__c</fullName>
        <formula>Gross_Sales__c - Red_in_GS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sales to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Product Summary</label>
    <nameField>
        <label>Product Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Product Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>